# geosaudepb

./: README.md  pyproject.toml
.github/workflows/: tests.yml
data/: estados.csv  estados.json  gerencias.csv  gerencias.json  macroregioes.csv  macroregioes.json  municipios.csv  municipios.json  municipiosbr.csv  municipiosbr.json  regioes.csv  unidade_saude.csv  unidade_saude.json
docs/: index.md
docs/pb/: macrorregiao.md
src/geosaudepb/: pb.py
src/geosaudepb/data/: __init__.py  _br.py  _pb.py  data.py
tests/: test_pb.py
